Fixed bug #29971 (variables_order behaviour)